ci: create build workflow

--- a/.github/workflows/01-build-image.yaml
+++ b/.github/workflows/01-build-image.yaml
@@ -40,9 +40,7 @@ jobs:
         env:
           DOCKER_BUILDKIT: 1
         run: |
-          echo "${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }}"
-          ls -lah
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }} .
+          docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }}
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
